--- a/views/base.ejs
+++ b/views/base.ejs
@@ -26,7 +26,7 @@
           />
           <button
             class="btn btn-success rounded-pill mt-2"
-            type="sub
+            type="submit
           "
           >
             Submit
