--- a/views/base.ejs
+++ b/views/base.ejs
@@ -4,6 +4,10 @@
   <div class="container w-25 border py-5">
     <div class="title">
       <h2 class="font-weight-bold">Login System</h2>
+      <% if(locals.logoutMsg){ %>
+      <div class="alter text-center alert-success"><%=locals.logoutMsg %></div>
+      <% } %>
+
       <span>Log in for the existing user</span>
       <form action="/route/login" method="post" class="pt-3">
         <div class="form-group">
